--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
         </nav>
         <div class="header__info">
           <button class="header__btn">
-
+            КУПИТЬ
           </button>
           <a href="tel:80505676767" class="header__phone">8 (050) 567 67 67</a>
         </div>
