--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
         </h3>
         <div class="benefits__items">
 
-          <div class="benefits__item">
+          <div class="benefits__item benefits__item-1">
             <div class="benefits__num">
               1
             </div>
@@ -176,7 +176,7 @@
               </h4>
               <p class="benefits__info-text">
                 Mavic 2 унаследовал 6 стандартных режимов интеллектуальной съемки
-                QuickShot:Roket/Dronie/Circle/Helix/Boomerang/Asteroid.
+                QuickShot:Roket/ Dronie/ Circle/ Helix/ Boomerang/ Asteroid.
               </p>
             </div>
           </div>
@@ -199,8 +199,8 @@
             </div>
           </div>
 
-          <div class="benefits__item">
-            <div class="benefits__num">
+          <div class="benefits__item benefits__item-3">
+            <div class="benefits__num ">
               3
             </div>
             <div class="benefits__img">
