--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
         </h3>
         <div class="benefits__items">
 
-          <div class="benefits__item benefits__item-1">
+          <div class="benefits__item">
             <div class="benefits__num">
               1
             </div>
@@ -199,7 +199,7 @@
             </div>
           </div>
 
-          <div class="benefits__item benefits__item-3">
+          <div class="benefits__item">
             <div class="benefits__num ">
               3
             </div>
@@ -261,7 +261,7 @@
 
           <div class="specification__item">
 
-            <div class="specification__box">
+            <div class="specification__box specification__box-1">
               <h4 class="specification__box-title">
                 Dlog-M 10 бит
               </h4>
@@ -272,7 +272,7 @@
               </p>
             </div>
 
-            <div class="specification__box">
+            <div class="specification__box specification__box-2">
               <h4 class="specification__box-title">
                 Камера Hasselblad
               </h4>
@@ -283,12 +283,12 @@
               </p>
             </div>
           </div>
-          <div class="specification__item">
+          <div class="specification__item specification__item--center">
             <img src="images/mavic.png">
           </div>
           <div class="specification__item">
 
-            <div class="specification__box">
+            <div class="specification__box specification__box-3">
               <h4 class="specification__box-title">
                 Матрица CMOS 1
               </h4>
@@ -297,7 +297,7 @@
               </p>
             </div>
 
-            <div class="specification__box">
+            <div class="specification__box specification__box-4">
               <h4 class="specification__box-title">
                 Видео HDR
               </h4>
@@ -338,7 +338,7 @@
             </p>
           </div>
 
-          <div class="questions__item">
+          <div class="questions__item questions__item--active">
             <h4 class="questions__item-title">
               Чем Mavic 2 лучше Mavic Pro?
             </h4>
@@ -454,19 +454,20 @@
             </li>
           </ul>
         </div>
+        <footer class="footer">
+          <div class="container">
+            <p class="footer__copy">
+              © DJI, 2020
+            </p>
+          </div>
+        </footer>
       </div>
     </div>
   </section>
 
-  <footer class="footer">
-    <div class="container">
-      <p class="footer__copy">
-        © DJI, 2020
-      </p>
-    </div>
-  </footer>
 
-  
+
+
 
   <!-- STOP WRITE CODE -->
   @@include('components/_footer.html')
